--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-trackers/affiliate-trackers.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-trackers/affiliate-trackers.component.html
@@ -6,7 +6,7 @@
   <table class="highlight table__custom">
     <thead>
     <tr>
-      <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'">
+      <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'" [class.cell--codeblock]="params.code">
         {{params.label}}
         <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
       </th>
@@ -26,7 +26,7 @@
         <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
         <md-menu #actionsMenu="mdMenu" x-position="before">
           <button md-menu-item [routerLink]="['/trackers', entity.id]">View Tracker</button>
-          <button md-menu-item>Remove from Affiliate</button>
+          <button md-menu-item (click)="dissociate(entity)">Dissociate Tracker</button>
         </md-menu>
       </td>
     </tr>
