--- a/src/app/pages/components/entities-table/entities-table.component.html
+++ b/src/app/pages/components/entities-table/entities-table.component.html
@@ -2,7 +2,7 @@
   <thead class="entity-index__table__header">
   <tr>
     <ng-container *ngFor="let params of columnParams">
-      <th (click)="setSortParams(params)" [class.cell--align-right]="params.align === 'right'">
+      <th (click)="setSortParams(params)" [class.cell--align-right]="params.align === 'right'" [class.cell--codeblock]="params.code">
         {{params.label}}
         <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
       </th>
