Enable affiliate update

--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -33,7 +33,7 @@
 
         <ng-template #editActions>
           <div (click)="cancelEdit()">CANCEL</div>
-          <div class="entity-view__info__edit__update" (click)="updateEntity(entity)">UPDATE</div>
+          <div class="entity-view__info__edit__update" (click)="updateAffiliate()">UPDATE</div>
         </ng-template>
       </div>
     </div>
