--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@
 @import "assets/scss/_advanced-filter.scss";
 @import "assets/scss/_reports-table.scss";
 @import "assets/scss/_tracker-view.scss";
+@import "assets/scss/_dialogs.scss";
 
 /***************
   HTML Styles
