--- a/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
+++ b/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
@@ -99,7 +99,7 @@
 
       </md-tab>
       <md-tab>
-        <tracker-affiliates [affiliates]="entity.affiliates" (associateAffiliate)="associateAffiliate($event)"></tracker-affiliates>
+        <tracker-affiliates [affiliates]="entity.affiliates" (associateAffiliate)="associateAffiliate($event)" (dissociateAffiliate)="dissociateAffiliate($event)"></tracker-affiliates>
       </md-tab>
     </md-tab-group>
 
