--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -48,7 +48,7 @@
 
       <md-tab>
         <div class="tab-container">
-          <affiliate-trackers [affiliateId]="entity.id"></affiliate-trackers>
+          <affiliate-trackers [affiliate]="entity"></affiliate-trackers>
         </div>
       </md-tab>
 
