Enable creation of trackers

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -115,7 +115,7 @@
             </div>
           </div>
 
-          <div class="profile-page__content__notifications__test" (click)="sendTestNotification()">Send test notification</div>
+          <div class="card-outside-button" (click)="sendTestNotification()">Send test notification</div>
 
         </md-tab>
 
