--- a/src/app/pages/trackers-page/trackers/trackers.component.html
+++ b/src/app/pages/trackers-page/trackers/trackers.component.html
@@ -4,7 +4,7 @@
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" [routerLink]="['/trackers', 'add']" *ngIf="hasWritePermission()" class="entity-index__add"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
