--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -1,15 +1,13 @@
-@import './_mixins.scss';
-.btn {
-  border-radius: $border-radius;
-  @include box-shadow(0 2px 5px 0 rgba(0,0,0,.26));
-  @include transition(all .2s linear);
-  .no-min {
-    min-width: 0;
-  }
-  &:hover:not(:disabled) {
-    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .26);
-  }
-  &:active {
-    box-shadow: none;
-  }
+.card-outside-button {
+  margin: 10px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  width: 150px;
+  padding: 8px;
+  background: #039BE5;
+  font-size: 12px;
+  font-weight: 500;
+  text-align: center;
+  color: white;
+  cursor: pointer;
 }
