--- a/src/assets/scss/_tracker-view.scss
+++ b/src/assets/scss/_tracker-view.scss
@@ -4,6 +4,7 @@
     display: inline-block;
     margin: 10px;
     max-width: 650px;
+    min-width: 350px;
     background: white;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 
@@ -42,6 +43,17 @@
 
       &__label {
         margin-bottom: 8px;
+      }
+
+      &__name {
+        md-input {
+          margin: 0;
+
+          .md-input-wrapper {
+            margin-top: 0;
+            margin-bottom: 20px;
+          }
+        }
       }
 
       &__type {
