--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@
 @import "assets/scss/_reports-table.scss";
 @import "assets/scss/_tracker-view.scss";
 @import "assets/scss/_dialogs.scss";
+@import "assets/scss/_buttons.scss";
 
 /***************
   HTML Styles
